# nanoCPT

./: .gitignore  AGENTS.md  CITATION.cff  README.md  REFERENCES.md  instant_lowpass.py  instant_lowpass_triton.py  lowpass.py  main.py  pyproject.toml  references.bib  run.sh
citations/: records.bib  reference-cache.json
docs/: foreign-cpt-findings.md
records/track_1_30min/2026-05-21_v1_LoRA_Track_1_30min_compiled_baseline/: config.json  main.py  metrics.jsonl  notes.md  record.txt  summary.json
records/track_1_30min/2026-05-21_v2_LoRA_mb8_Track_1_30min_default_util/: config.json  main.py  metrics.jsonl  record.txt  summary.json
records/track_1_30min/2026-05-22_compile_smoke_LoRA_flex_WSD/: config.json  metrics.jsonl  record.txt  summary.json
records/track_1_30min/2026-05-22_smoke_LoRA_PiSSA_WSD/: config.json  metrics.jsonl  record.txt  summary.json
records/track_1_30min/2026-05-22_smoke_Muon_RMS_PiSSA_WSD/: config.json  metrics.jsonl  record.txt  summary.json
records/track_1_30min/2026-05-22_v3_LoRA_PiSSA_WSD/: config.json  main.py  metrics.jsonl  record.txt  summary.json
records/track_2_5min/2026-05-28_Track2_normuon_hybrid_full-FT_seed1337/: config.json  main.py  metrics.jsonl  record.txt  summary.json
records/track_2_5min/v2/2026-05-29_Track2_DEBUG_nonreentrant_shapes/: config.json  metrics.jsonl  record.txt  summary.json
scripts/: generate_citations.py  push_conlang_dataset.py  synthesize_conlang_cpt.py
tests/: test_foreign_cpt_dataset.py  test_generate_citations.py  test_instant_lowpass.py  test_lowpass_linear.py  test_sft_renderer.py
(+63 files in other folders)
