[project]
name = "modded-continued-training"
version = "0.1.0"
description = "Single-H100 fine-tuning speedrun on Modal."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.8.5",
    "google-genai>=2.6.0",
    "huggingface-hub>=1.16.4",
    "modal>=1.4",
    "pyarrow>=24.0.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false
